--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://moshiur-bd.github.io/cf-rank"
 }
