--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "fs": "0.0.1-security",
     "gh-pages": "^3.2.3",
+    "https": "^1.0.0",
+    "jsdom": "^16.6.0",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xmldom": "^0.6.0"
   },
   "scripts": {
     "predeploy": "npm run build",
